--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -6,19 +6,14 @@
   "Against this bill of exchange": "Against this bill of exchange",
   "All": "All",
   "Authorised signer": "Authorised signer",
-  "Balances": "Balances",
   "Bill issuer": "Bill issuer",
-  "Bill list": "Bill list",
   "Bills": "Bills",
   "Birth date": "Birth date",
   "Birth date (MM/DD/YYYY)": "Birth date (MM/DD/YYYY)",
   "Bitcoin for the real economy": "Bitcoin for the real economy",
   "Calculate discount": "Calculate discount",
   "Cancel": "Cancel",
-  "Cashflow": "Cashflow",
   "City of birth": "City of birth",
-  "City of issuing": "City of issuing",
-  "City of payment": "City of payment",
   "City of registration": "City of registration",
   "Clear all": "Clear all",
   "Company": "Company",
@@ -34,17 +29,12 @@
   "Days": "Days",
   "Discount": "Discount",
   "Discount rate": "Discount rate",
-  "Draw bill": "Draw bill",
-  "E-bills": "E-bills",
   "Edit": "Edit",
-  "Edit issue": "Edit issue",
   "Email address": "Email address",
   "Endorse to the order of": "Endorse to the order of",
   "Enter app": "Enter app",
-  "Filter": "Filter",
   "Forgot your PIN?": "Forgot your PIN?",
   "Full name": "Full name",
-  "Go to overview": "Go to overview",
   "Gross amount": "Gross amount",
   "Home": "Home",
   "I agree to the Terms and conditions": "I agree to the Terms and conditions",
@@ -54,7 +44,6 @@
   "Issue a promissory note where you, the drawer, commit to making the payment": "Issue a promissory note where you, the drawer, commit to making the payment",
   "Issue bill": "Issue bill",
   "Issue bills in your own name": "Issue bills in your own name",
-  "Issue date": "Issue date",
   "Legal company name": "Legal company name",
   "Legal full name": "Legal full name",
   "Locale": "Locale",
@@ -81,17 +70,14 @@
   "Payer": "Payer",
   "Person": "Person",
   "Personal identity": "Personal identity",
-  "Place of payment": "Place of payment",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
   "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
   "Postal address": "Postal address",
   "Preview": "Preview",
-  "Preview bill": "Preview bill",
   "Preview company": "Preview company",
   "Preview identity": "Preview identity",
-  "Recent bills": "Recent bills",
   "Recover with seed phrase": "Recover with seed phrase",
   "Registration date": "Registration date",
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
@@ -99,24 +85,19 @@
   "Required information": "Required information",
   "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
-  "Search": "Search",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
-  "See all": "See all",
   "See history": "See history",
   "Select date": "Select dates",
   "Select date range": "Select date range",
   "Select locale": "Select locale",
   "Selected date": "Selected date",
-  "Sell": "Sell",
-  "Sell a bill": "Sell a bill",
   "Settings": "Settings",
   "Sign": "Sign",
   "Sign bills on behalf of a company": "Sign bills on behalf of a company",
   "Skip for now": "Skip for now",
   "Social security number": "Social security number",
   "Start creating a bill and distribute it to your contacts": "Start creating a bill and distribute it to your contacts",
-  "Success": "Success",
   "Successfully created your identity": "Successfully created your identity",
   "This information is optional but helps you to build a credit score": "This information is optional but helps you to build a credit score",
   "To the order of": "To the order of",
@@ -126,10 +107,27 @@
   "Upload document": "Upload document",
   "Upload proof of registration": "Upload proof of registration",
   "We have successfully created your identity and you can now use the app": "We have successfully created your identity and you can now use the app",
-  "You can now view the bill in your overview of bills": "You can now view the bill in your overview of bills",
+  "bill.actions.acceptance.cancel": "Cancel",
+  "bill.actions.acceptance.confirm": "Confirm",
+  "bill.actions.acceptance.description": "The signing of your acceptance is legally binding",
+  "bill.actions.acceptance.reject": "Reject acceptance",
+  "bill.actions.acceptance.sign": "Sign acceptance",
+  "bill.actions.acceptance.title": "The signing of your acceptance is legally binding",
   "bill.actions.actionsList": "Endorse",
+  "bill.actions.buy.reject": "Reject",
+  "bill.actions.buy.view": "View payment details",
   "bill.actions.endorse": "Endorse",
+  "bill.actions.list": "Endorse",
   "bill.actions.mint": "Mint",
+  "bill.actions.offer.view": "View payment status",
+  "bill.actions.pay": "Pay",
+  "bill.actions.payment.check": "Check payment",
+  "bill.actions.requestAcceptance": "Request to accept",
+  "bill.actions.requestAcceptance.error": "Request failed",
+  "bill.actions.requestAcceptance.success": "Request sent successfully",
+  "bill.actions.requestPayment": "Request payment",
+  "bill.actions.requestPayment.error": "Request failed",
+  "bill.actions.requestPayment.success": "Request sent successfully",
   "bill.actions.requestToAccept": "Request to accept",
   "bill.actions.sell": "Sell",
   "bill.card.accepted": "Accepted",
@@ -141,19 +139,32 @@
   "bill.card.payer": "Payer",
   "bill.card.placeOfPayment": "Place of payment",
   "bill.card.status": "Status:",
-  "bill.draw.date": "Date",
-  "bill.draw.edit": "Edit",
-  "bill.draw.noProtest": "No protest. Value received.",
-  "bill.draw.payOn": "pay on",
-  "bill.draw.payee": "Payee",
-  "bill.draw.payer": "Payer",
-  "bill.draw.placeOfPayment": "Place of payment",
-  "bill.draw.sum": "the sum of",
-  "bill.draw.toTheOrderOf": "to the sum of",
+  "bill.create.preview.details.billOfExchange": "Against this bill of exchange",
+  "bill.create.preview.details.drawer": "Drawer",
+  "bill.create.preview.details.noProtest": "No protest.",
+  "bill.create.preview.details.payOn": "Pay on",
+  "bill.create.preview.details.payer": "Payer",
+  "bill.create.preview.details.placeOfPayment": "Place of payment",
+  "bill.create.preview.details.sum": "The sum of",
+  "bill.create.preview.details.toTheOrderOf": "To the order of",
+  "bill.create.preview.error": "Error",
+  "bill.create.preview.error.description": "Error while creating bill. Please review the information and try again.",
+  "bill.endorse.endorsee": "Endorsee",
+  "bill.endorse.sign": "Are you sure?",
+  "bill.endorse.sign.cancel": "Cancel",
+  "bill.endorse.sign.confirm": "Confirm",
+  "bill.endorse.sign.description": "The signing of the endorsement is legally binding",
+  "bill.endorse.termsAndConditions": "I agree to the Terms and conditions",
+  "bill.endorsement.payee": "Pay to the order of",
+  "bill.endorsement.signer": "Signed",
+  "bill.endorsements.sort": "Newest",
+  "bill.endorsements.title": "Endorsements ({count})",
   "bill.mint.cancel": "Cancel mint request",
   "bill.mint.preview.forTheSumOf": "for the sum of",
   "bill.mint.preview.mintedEcash": "Ecash minted",
   "bill.mint.preview.sign": "Sign",
+  "bill.mint.preview.sign.cancel": "Cancel",
+  "bill.mint.preview.sign.confirm": "Confirm",
   "bill.mint.preview.sign.subtitle": "The endorsement to the mint is legally binding",
   "bill.mint.preview.sign.title": "Are you sure?",
   "bill.mint.preview.title": "Preview mint",
@@ -164,6 +175,7 @@
   "bill.mint.received.mintedBy": "By",
   "bill.mint.received.paymentReceived": "Received",
   "bill.mint.request.action": "Request mint quote",
+  "bill.mint.request.action.success": "Request sent successfully",
   "bill.mint.request.quote": "Quote",
   "bill.mint.request.reject": "Reject",
   "bill.mint.request.selectMint": "Select a mint",
@@ -171,6 +183,16 @@
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
+  "bill.offer.buyer": "Payment from",
+  "bill.offer.id": "Sell bill",
+  "bill.offer.payment.address": "Address to pay",
+  "bill.offer.payment.link": "Link to pay",
+  "bill.offer.title": "Bill offer",
+  "bill.pay.title": "Payment instructions",
+  "bill.payment.info.address": "Address to pay",
+  "bill.payment.info.from": "Payment from",
+  "bill.payment.info.link": "Link to pay",
+  "bill.payment.info.privateKey": "Private key spend",
   "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
   "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
   "bill.recourse.nonAcceptance.select": "Select",
@@ -181,6 +203,32 @@
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.reject.sign.cancel": "Cancel",
+  "bill.reject.sign.confirm": "Confirm",
+  "bill.sell.buyer": "Buyer",
+  "bill.sell.calculateDiscount": "Calculate discount",
+  "bill.sell.forTheSumOf": "for the sum of",
+  "bill.sell.sign": "Sign",
+  "bill.sell.sign.cancel": "Cancel",
+  "bill.sell.sign.confirm": "Confirm",
+  "bill.sell.title": "Sell bill",
+  "bill.sell.toTheOrderOf": "to the order of",
+  "bill.status.accepted": "Accepted",
+  "bill.status.paid": "Paid",
+  "bill.status.pending_acceptance": "Pending acceptance",
+  "bill.status.pending_payment": "Pending payment",
+  "bill.status.rejected": "Rejected",
+  "bill.status.unpaid": "Unpaid",
+  "bill.view.details.billOfExchange": "Against this bill of exchange",
+  "bill.view.details.drawer": "Drawer",
+  "bill.view.details.endorsements": "Endorsements",
+  "bill.view.details.noProtest": "No protest. Value received.",
+  "bill.view.details.payOn": "Pay on",
+  "bill.view.details.payer": "Payer",
+  "bill.view.details.placeOfPayment": "Place of payment",
+  "bill.view.details.status": "Status:",
+  "bill.view.details.sum": "The sum of",
+  "bill.view.details.toTheOrderOf": "To the order of",
   "bills.create.billOfExchange": "Against this bill of exchange",
   "bills.create.discount": "Calculate discount",
   "bills.create.edit": "Edit",
@@ -198,10 +246,14 @@
   "bills.create.payment.confirm": "Confirm",
   "bills.create.payment.edit": "Edit",
   "bills.create.payment.title": "Place of payment",
+  "bills.create.preview": "Preview",
+  "bills.create.preview.details.valueReceived": "Value received.",
+  "bills.create.sign": "Sign",
   "bills.create.sumOf": "the sum of",
   "bills.create.switchIdentity": "Switch identity",
   "bills.create.title": "Draw bill",
   "bills.create.type": "Type of bill",
+  "bills.create.valueReceived": "Value received.",
   "bills.list.dateRange": "Date range",
   "bills.list.earlier": "Earlier",
   "bills.list.maturity": "Maturity",
@@ -226,6 +278,10 @@
   "company.create.postalAddress.title": "Company postal address",
   "company.create.requiredInformation.description": "Please enter the required data to create a new company identity",
   "company.create.requiredInformation.title": "Company identity",
+  "company.create.sign": "Sign",
+  "company.create.success.description": "We have successfully created your company and can add other signers",
+  "company.create.success.finish": "Finish",
+  "company.create.success.title": "Success",
   "company.edit.cancel": "Cancel",
   "company.edit.save": "Save",
   "company.edit.title": "Edit company identity",
@@ -236,9 +292,11 @@
   "company.registration_date": "Registration date",
   "company.registration_number": "Registration number",
   "company.signer.add": "Add authorized signer",
+  "company.signer.add.success": "Authorized signer added successfully",
   "company.signer.remove": "Do you want to delete {name}?",
   "company.signer.remove.cancel": "Cancel",
   "company.signer.remove.confirm": "Confirm",
+  "company.signer.remove.success": "Authorized signer removed successfully",
   "company.signer.remove.warning": "You can always re-add a signer later",
   "company.signers": "Authorized signers",
   "company.view.signers": "Edit authorized signers",
@@ -329,21 +387,15 @@
   "dropdown.option.60days": "60 Days",
   "dropdown.option.6months": "6 Months",
   "dropdown.option.90days": "90 Days",
-  "endorse.cancel": "Cancel",
-  "endorse.confirm": "Confirm",
-  "endorse.endorsee": "Endorsee",
   "endorse.orderOf": "to the order of",
-  "endorse.sign": "Sign",
-  "endorse.termsAndConditions": "I agree to the Terms and conditions",
   "endorse.title": "Endorse bill",
-  "endorsement.payee": "Pay to the order of",
-  "endorsement.signer": "Signed",
-  "endorsements.sort": "Newest",
-  "endorsements.title": "Endorsements ({count})",
   "home.balances": "Balances",
   "home.balances.contingent": "Contingent",
   "home.balances.payee": "Payee",
   "home.balances.payer": "Payer",
+  "home.recentBills": "Recent bills",
+  "home.recentBills.cashflow": "Cashflow",
+  "home.recentBills.list": "Bill list",
   "identity.address": "Street address",
   "identity.city": "City",
   "identity.city_of_birth": "City of birth",
@@ -407,21 +459,12 @@
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
   "onboarding.screens.third": "Practical, clear, and organised. Your finances at your fingertips.",
-  "pages.bill.preview.heading": "Against this bill of exchange",
-  "pages.bill.preview.invoice": "Invoice",
-  "pages.bill.preview.noProtest": "No protest. Value received.",
   "pages.identityCreation.createNewIdentity.subtitle": "Personal data is stored encrypted and cannot be accessed without your signing an explicit approval",
   "pages.identityCreation.createNewIdentity.title": "Encrypted data",
-  "pages.mintBill.billInformation.calculateDiscount": "Calculate discount",
-  "pages.onboarding.confirmIdentity.agreeToTerms": "I agree to the Terms and conditions",
   "pages.onboarding.emailVerification.continue": "Continue",
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "pay.title": "Payment instructions",
-  "payment.info.address": "Address to pay",
-  "payment.info.from": "Payment from",
-  "payment.info.link": "Link to pay",
   "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
   "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
