chore: add hide/reveal button

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -501,7 +501,9 @@
   "settings.security.loginWithPin.description": "Use your PIN code to unlock the app",
   "settings.security.recoveryPhrase": "Recovery phrase",
   "settings.security.recoveryPhrase.description": "Never share this phrase with anyone, do not store electronically",
+  "settings.security.recoveryPhrase.hideSeedPhrase": "Hide seedphrase",
   "settings.security.recoveryPhrase.title": "Security",
+  "settings.security.recoveryPhrase.viewSeedPhrase": "View seedphrase",
   "settings.security.recoveryPhraseDescription": "12 words",
   "settings.security.resetApp": "Reset app",
   "settings.security.resetAppDescription": "Remove identity",
