--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,6 +1,5 @@
 {
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
-  "Accept": "Accept",
   "Add photo": "Add photo",
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
@@ -57,7 +56,6 @@
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
-  "No notifications": "No notifications",
   "No protest": "No protest",
   "No results": "No results",
   "Node ID": "Node ID",
@@ -65,7 +63,6 @@
   "Optional information": "Optional information",
   "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
   "Paste from clipboard": "Paste from clipboard",
-  "Pay": "Pay",
   "Payee": "Payee",
   "Payer": "Payer",
   "Person": "Person",
@@ -87,7 +84,6 @@
   "Restore with seed phrase": "Restore with seed phrase",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
-  "See history": "See history",
   "Select date": "Select dates",
   "Select date range": "Select date range",
   "Select locale": "Select locale",
@@ -455,6 +451,18 @@
   "identity.personal.zip": "Zip code",
   "identity.view": "View",
   "identity.zip": "Zip code",
+  "notifications.empty.description": "Start creating a bill and distribute it to your contacts",
+  "notifications.empty.issueBill": "Issue bill",
+  "notifications.empty.title": "No notifications",
+  "notifications.filter.accept": "Accept",
+  "notifications.filter.all": "All",
+  "notifications.filter.pay": "Pay",
+  "notifications.filter.recourse": "Recourse",
+  "notifications.history.collapse": "Collapse history",
+  "notifications.history.view": "See history",
+  "notifications.list.history": "History",
+  "notifications.list.title": "Notifications",
+  "notifications.list.today": "Today",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
