--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -189,16 +189,22 @@
   "bill.payment.info.from": "Payment from",
   "bill.payment.info.link": "Link to pay",
   "bill.payment.info.privateKey": "Private key spend",
+  "bill.recourse.holders": "Prior holders",
+  "bill.recourse.holders.description": "Select a prior holder for recourse",
+  "bill.recourse.noHolders": "No prior holders",
   "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
   "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
   "bill.recourse.nonAcceptance.select": "Select",
   "bill.recourse.nonAcceptance.sum": "Request the sum of",
   "bill.recourse.nonAcceptance.title": "Request recourse",
+  "bill.recourse.request.sign": "Sign",
   "bill.recourse.sign": "Sign",
   "bill.recourse.sign.cancel": "Cancel",
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.recourse.sumOf": "Request the sum of",
+  "bill.recourse.title": "Request recourse",
   "bill.reject.sign.cancel": "Cancel",
   "bill.reject.sign.confirm": "Confirm",
   "bill.sell.buyer": "Buyer",
