--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -414,7 +414,8 @@
   "identity.country": "Country",
   "identity.country_of_birth": "Country of birth",
   "identity.create.continue": "Continue",
-  "identity.create.createNew": "Create new identity",
+  "identity.create.finish": "Finish",
+  "identity.create.new": "Create new identity",
   "identity.create.optionalInformation.continue": "Continue",
   "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
   "identity.create.optionalInformation.skip": "Skip",
@@ -430,6 +431,7 @@
   "identity.create.restore": "Restore identity",
   "identity.create.sign": "Sign",
   "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
+  "identity.create.success.description": "You have successfully created your identity and can now use the app",
   "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
   "identity.create.title": "Encrypted data",
   "identity.date_of_birth": "Birth date",
@@ -453,6 +455,7 @@
   "identity.personal.date_of_birth": "Birth date",
   "identity.personal.email": "Email address",
   "identity.personal.identification_number": "Social security number",
+  "identity.personal.identity_file": "Identity document",
   "identity.personal.name": "Legal full name",
   "identity.personal.zip": "Zip code",
   "identity.view": "View",
