chore: fixes to identity restoration

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -62,7 +62,6 @@
   "Notifications": "Notifications",
   "Optional information": "Optional information",
   "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
-  "Paste from clipboard": "Paste from clipboard",
   "Payee": "Payee",
   "Payer": "Payer",
   "Person": "Person",
@@ -80,7 +79,6 @@
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
   "Required information": "Required information",
-  "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
@@ -459,6 +457,12 @@
   "identity.personal.identity_file": "Identity document",
   "identity.personal.name": "Legal full name",
   "identity.personal.zip": "Zip code",
+  "identity.restore.backup.description": "Please upload your backup file to restore your data",
+  "identity.restore.backup.heading": "Restore backup file",
+  "identity.restore.button": "Restore identity",
+  "identity.restore.description": "Please enter your seed phrase to restore your identity",
+  "identity.restore.heading": "Recover with seed phrase",
+  "identity.restore.paste": "Paste from clipboard",
   "identity.view": "View",
   "identity.zip": "Zip code",
   "notifications.empty.description": "Start creating a bill and distribute it to your contacts",
@@ -483,8 +487,6 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
-  "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
   "settings.displayCurrency": "Display currency",
   "settings.displayCurrency.title": "Display currency",
