chore: fix issues in DiscountForm

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -68,7 +68,6 @@
   "Person": "Person",
   "Personal identity": "Personal identity",
   "Please check if all the details are correct before proceeding": "Please check if all the details are correct before proceeding",
-  "Please enter a valid value between {min} and {max}.": "Please enter a valid value between 0 and 99.9999.",
   "Please enter a valid value.": "Please enter a valid value.",
   "Please fill in your personal details, all details are handled confidentially": "Please fill in your personal details, all details are handled confidentially",
   "Postal address": "Postal address",
@@ -379,6 +378,8 @@
   "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
   "contacts.zipCode": "Zip code",
+  "discountForm.daysInput.error.text": "Please enter a valid value between {min} and {max}.",
+  "discountForm.discountRate.error.text": "Please enter a valid value between {min} and {max}.",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
