chore: i18n in DiscountForm

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -26,8 +26,6 @@
   "Create new identity": "Create new identity",
   "Date range": "Date range",
   "Dates": "Dates",
-  "Days": "Days",
-  "Discount": "Discount",
   "Discount rate": "Discount rate",
   "Edit": "Edit",
   "Email address": "Email address",
@@ -35,7 +33,6 @@
   "Enter app": "Enter app",
   "Forgot your PIN?": "Forgot your PIN?",
   "Full name": "Full name",
-  "Gross amount": "Gross amount",
   "Home": "Home",
   "I agree to the Terms and conditions": "I agree to the Terms and conditions",
   "Identity document": "Identity document",
@@ -48,12 +45,10 @@
   "Legal full name": "Legal full name",
   "Locale": "Locale",
   "Make it easier to create bills with colleagues from your company": "Make it easier to create bills with colleagues from your company",
-  "Mark up": "Mark up",
   "Maturity": "Maturity",
   "Mint": "Mint",
   "Mint a bill": "Mint a bill",
   "Name, address, email": "Name, address, email...",
-  "Net amount": "Net amount",
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
@@ -378,8 +373,14 @@
   "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
   "contacts.zipCode": "Zip code",
+  "discountForm.days.label.text": "Days",
   "discountForm.daysInput.error.text": "Please enter a valid value between {min} and {max}.",
+  "discountForm.discount.label.text": "Discount",
   "discountForm.discountRate.error.text": "Please enter a valid value between {min} and {max}.",
+  "discountForm.discountRate.label.text": "Discount rate",
+  "discountForm.grossAmount.label.text": "Gross amount",
+  "discountForm.markUp.label.text": "Mark up",
+  "discountForm.netAmount.label.text": "Net amount",
   "displayRange.days": "{value} Days",
   "displayRange.oneYear": "1 Year",
   "displayRange.selectRange": "Select range",
