integration fixes and additions (#251)
* wip

* chore: create seed phrase backup page

* chore: add hide/reveal button

* wip

* wip

* wip

* chore: identity creation fixes

* chore: fixes to identity restoration

* chore: fix routes

* Change api url

* chore: add refresh button component

* chore: add backup download button

* chore: add file attachment download

* fix: allow empty attachments

* more fixes

* wip

---------

Co-authored-by: MT <tymkomykyta2108@gmail.com>

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -1,6 +1,5 @@
 {
   "A strong trade credit solution, directly between businesses": "A strong trade credit solution, directly between businesses",
-  "Accept": "Accept",
   "Add photo": "Add photo",
   "Against the sum of": "Against the sum of",
   "Against this bill of exchange": "Against this bill of exchange",
@@ -58,15 +57,12 @@
   "New bill": "New bill",
   "New identity": "New identity",
   "No bills issued yet": "No bills issued yet",
-  "No notifications": "No notifications",
   "No protest": "No protest",
   "No results": "No results",
   "Node ID": "Node ID",
   "Notifications": "Notifications",
   "Optional information": "Optional information",
   "PDF, PNG or JPG (max. 5mb)": "PDF, PNG or JPG (max. 5mb)",
-  "Paste from clipboard": "Paste from clipboard",
-  "Pay": "Pay",
   "Payee": "Payee",
   "Payer": "Payer",
   "Person": "Person",
@@ -84,11 +80,9 @@
   "Registration date (MM/DD/YYYY)": "Registration date (MM/DD/YYYY)",
   "Registration number": "Registration number",
   "Required information": "Required information",
-  "Restore identity": "Restore identity",
   "Restore with seed phrase": "Restore with seed phrase",
   "Search field for home page": "Search...",
   "Search for bills": "Search for bills...",
-  "See history": "See history",
   "Select date": "Select dates",
   "Select date range": "Select date range",
   "Select locale": "Select locale",
@@ -194,16 +188,22 @@
   "bill.payment.info.from": "Payment from",
   "bill.payment.info.link": "Link to pay",
   "bill.payment.info.privateKey": "Private key spend",
+  "bill.recourse.holders": "Prior holders",
+  "bill.recourse.holders.description": "Select a prior holder for recourse",
+  "bill.recourse.noHolders": "No prior holders",
   "bill.recourse.nonAcceptance.priorHolders": "Prior holders",
   "bill.recourse.nonAcceptance.priorHolders.description": "Select a prior holder for recourse",
   "bill.recourse.nonAcceptance.select": "Select",
   "bill.recourse.nonAcceptance.sum": "Request the sum of",
   "bill.recourse.nonAcceptance.title": "Request recourse",
+  "bill.recourse.request.sign": "Sign",
   "bill.recourse.sign": "Sign",
   "bill.recourse.sign.cancel": "Cancel",
   "bill.recourse.sign.confirm": "Confirm",
   "bill.recourse.sign.subtitle": "This recourse request is legally binding",
   "bill.recourse.sign.title": "Are you sure?",
+  "bill.recourse.sumOf": "Request the sum of",
+  "bill.recourse.title": "Request recourse",
   "bill.reject.sign.cancel": "Cancel",
   "bill.reject.sign.confirm": "Confirm",
   "bill.sell.buyer": "Buyer",
@@ -413,12 +413,14 @@
   "identity.country": "Country",
   "identity.country_of_birth": "Country of birth",
   "identity.create.continue": "Continue",
-  "identity.create.createNew": "Create new identity",
+  "identity.create.finish": "Finish",
+  "identity.create.new": "Create new identity",
   "identity.create.optionalInformation.continue": "Continue",
   "identity.create.optionalInformation.description": "This information is optional, enter it to grow your credit score",
   "identity.create.optionalInformation.skip": "Skip",
   "identity.create.optionalInformation.title": "Optional: other information",
   "identity.create.postalAddress.description": "These fields are only needed if you want to issue bills in your own name",
+  "identity.create.postalAddress.skip": "Skip",
   "identity.create.postalAddress.title": "Optional: postal address",
   "identity.create.preview.description": "Please check your personal data before signing",
   "identity.create.preview.mainInformation": "Main information",
@@ -429,6 +431,7 @@
   "identity.create.restore": "Restore identity",
   "identity.create.sign": "Sign",
   "identity.create.subtitle": "Your personal data is stored securely and encrypted in the network, nobody can decrypt it without your permission",
+  "identity.create.success.description": "You have successfully created your identity and can now use the app",
   "identity.create.termsAndConditions": "I agree to the <span>Terms and conditions</span>",
   "identity.create.title": "Encrypted data",
   "identity.date_of_birth": "Birth date",
@@ -452,10 +455,29 @@
   "identity.personal.date_of_birth": "Birth date",
   "identity.personal.email": "Email address",
   "identity.personal.identification_number": "Social security number",
+  "identity.personal.identity_file": "Identity document",
   "identity.personal.name": "Legal full name",
   "identity.personal.zip": "Zip code",
+  "identity.restore.backup.description": "Please upload your backup file to restore your data",
+  "identity.restore.backup.heading": "Restore backup file",
+  "identity.restore.button": "Restore identity",
+  "identity.restore.description": "Please enter your seed phrase to restore your identity",
+  "identity.restore.heading": "Recover with seed phrase",
+  "identity.restore.paste": "Paste from clipboard",
   "identity.view": "View",
   "identity.zip": "Zip code",
+  "notifications.empty.description": "Start creating a bill and distribute it to your contacts",
+  "notifications.empty.issueBill": "Issue bill",
+  "notifications.empty.title": "No notifications",
+  "notifications.filter.accept": "Accept",
+  "notifications.filter.all": "All",
+  "notifications.filter.pay": "Pay",
+  "notifications.filter.recourse": "Recourse",
+  "notifications.history.collapse": "Collapse history",
+  "notifications.history.view": "See history",
+  "notifications.list.history": "History",
+  "notifications.list.title": "Notifications",
+  "notifications.list.today": "Today",
   "onboarding.screens.first": "The simple trade finance solution. Capital to grow your business.",
   "onboarding.screens.fourth": "Open software, always on, 24x7. Free to download and use for all.",
   "onboarding.screens.second": "B2B direct credit. no middlemen. Easier financing, better terms.",
@@ -472,9 +494,8 @@
   "pages.onboarding.emailVerification.openEmailInbox": "Open email inbox",
   "pages.onboarding.emailVerification.resendCode": "Resend (30s)",
   "pages.onboarding.emailVerification.title": "Verify your email address",
-  "seedPhrase.recover.description": "Please enter your seed phrase to restore your identity",
-  "seedPhrase.recover.heading": "Recover with seed phrase",
   "settings.agreements.title": "Agreements",
+  "settings.backup.download": "Backup data",
   "settings.displayCurrency": "Display currency",
   "settings.displayCurrency.title": "Display currency",
   "settings.languagePreference": "Language",
@@ -507,6 +528,10 @@
   "settings.security.loginWithPin": "Login with PIN code",
   "settings.security.loginWithPin.description": "Use your PIN code to unlock the app",
   "settings.security.recoveryPhrase": "Recovery phrase",
+  "settings.security.recoveryPhrase.description": "Never share this phrase with anyone, do not store electronically",
+  "settings.security.recoveryPhrase.hideSeedPhrase": "Hide seedphrase",
+  "settings.security.recoveryPhrase.title": "Security",
+  "settings.security.recoveryPhrase.viewSeedPhrase": "View seedphrase",
   "settings.security.recoveryPhraseDescription": "12 words",
   "settings.security.resetApp": "Reset app",
   "settings.security.resetAppDescription": "Remove identity",
