chore: accept mint in mint view

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -169,6 +169,10 @@
   "bill.mint.request.reject": "Reject",
   "bill.mint.request.selectMint": "Select a mint",
   "bill.mint.request.title": "Request to mint",
+  "bill.mint.request.toast.error.description": "Error while generating quote!",
+  "bill.mint.request.toast.error.title": "Error!",
+  "bill.mint.request.toast.success.description": "Successfully generated quote!",
+  "bill.mint.request.toast.success.title": "Success!",
   "bill.mint.requestToMint": "Request to mint",
   "bill.mint.selectQuote": "Select a quote",
   "bill.mint.title": "Mint quotes",
