--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -113,6 +113,8 @@
   "bill.actions.payment.check": "Check payment",
   "bill.actions.requestAcceptance": "Request to accept",
   "bill.actions.requestAcceptance.error": "Request failed",
+  "bill.actions.requestAcceptance.error.description": "Error while accepting quote!",
+  "bill.actions.requestAcceptance.error.title": "Error!",
   "bill.actions.requestAcceptance.success": "Request sent successfully",
   "bill.actions.requestPayment": "Request payment",
   "bill.actions.requestPayment.error": "Request failed",
