chore: fix all contacts flows

--- a/src/i18n/source.json
+++ b/src/i18n/source.json
@@ -311,15 +311,22 @@
   "contact.view.delete.title": "Are you sure?",
   "contacts.address": "Street address",
   "contacts.city": "City",
+  "contacts.company.city": "City of registration",
   "contacts.company.cityOfRegistration": "City of registration",
+  "contacts.company.country": "Country of registration",
   "contacts.company.countryOfRegistration": "Country of registration",
+  "contacts.company.date": "Date of registration",
   "contacts.company.dateOfRegistration": "Date of registration",
+  "contacts.company.document": "Registration document",
   "contacts.company.email": "Company email",
+  "contacts.company.identificationNumber": "Registration number",
   "contacts.company.name": "Legal company name",
   "contacts.company.registrationDocument": "Registration document",
   "contacts.company.registrationNumber": "Registration number",
+  "contacts.company.uploadDocument": "Upload registration document",
   "contacts.country": "Country",
   "contacts.create": "New contact",
+  "contacts.create.continue": "Continue",
   "contacts.create.optionalInformation.cityOfBirth": "City of birth",
   "contacts.create.optionalInformation.cityOfRegistration": "City of registration",
   "contacts.create.optionalInformation.continue": "Continue",
@@ -349,7 +356,6 @@
   "contacts.create.preview.registrationNumber": "Registration number",
   "contacts.create.preview.save": "Save",
   "contacts.create.preview.socialSecurityNumber": "Social security number",
-  "contacts.create.preview.title": "Preview",
   "contacts.create.requiredInformation.companyName": "Legal company name",
   "contacts.create.requiredInformation.continue": "Continue",
   "contacts.create.requiredInformation.description": "This information is required for bill counterparties",
@@ -359,6 +365,9 @@
   "contacts.create.switchToCompany": "Company",
   "contacts.create.switchToMint": "Mint",
   "contacts.create.switchToPerson": "Person",
+  "contacts.create.type.company": "Company",
+  "contacts.create.type.mint": "Mint",
+  "contacts.create.type.person": "Person",
   "contacts.edit": "Edit contact",
   "contacts.edit.cancel": "Cancel",
   "contacts.edit.save": "Save",
@@ -368,13 +377,19 @@
   "contacts.list.create": "New contact",
   "contacts.list.title": "Contacts",
   "contacts.nodeId": "Node ID",
+  "contacts.person.city": "City of birth",
   "contacts.person.cityOfBirth": "City of birth",
+  "contacts.person.country": "Country of birth",
   "contacts.person.countryOfBirth": "Country of birth",
+  "contacts.person.date": "Date of birth",
   "contacts.person.dateOfBirth": "Date of birth",
+  "contacts.person.document": "Identity document",
   "contacts.person.email": "Email address",
+  "contacts.person.identificationNumber": "Social security number",
   "contacts.person.identityDocument": "Identity document",
   "contacts.person.identityNumber": "Social security number",
   "contacts.person.name": "Legal full name",
+  "contacts.person.uploadDocument": "Upload identity document",
   "contacts.select.details.select": "Select",
   "contacts.select.title": "Select contact",
   "contacts.view.title": "View contact",
